--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <ul>
                 <li>
                     <a href="about.html">
-                        About
+                        About Us
                     </a>
                 </li>
                 <li>
