--- a/index.html
+++ b/index.html
@@ -44,9 +44,78 @@
         </nav>
     </header>
     <main>
-        <p>
-            Home Page
-        </p>
+    <!-- BANNER IMAGE -->
+    <div id="banner-wrapper">
+        <img
+          id="banner"
+          alt="Banner Image"
+          src="https://via.placeholder.com/1500x300"
+        />
+      </div>
+  
+      <!-- FIRST ROW -->
+      <section class="three-cols">
+        <div class="right-column-img">
+            <img
+              alt="Middle image"
+              src="https://via.placeholder.com/150"
+            />
+        </div>
+        <div class="mid-column-text">
+          <h2></h2>
+          <p>
+            Does a few hours of white water adventure excite you? How about a
+            chance to cliff jump into the river from some of the most scenic parts
+            of the wilderness? If your looking for a memorable river experience
+            you've come to the right place! We have trips suited for all
+            experience and thrill levels.
+          </p>
+        </div>
+        <div class="left-column-img">
+          <img
+            alt="Middle image"
+            src="https://via.placeholder.com/150"
+          />
+        </div>
+      </section>
+            <!-- second row-->
+            <section class="three-cols">
+                <div class="mid-column-text">
+                  <h2></h2>
+                  <p>
+                    Does a few hours of white water adventure excite you? How about a
+                    chance to cliff jump into the river from some of the most scenic parts
+                    of the wilderness? If your looking for a memorable river experience
+                    you've come to the right place! We have trips suited for all
+                    experience and thrill levels.
+                  </p>
+                </div>
+              </section>
+      <!-- third row-->
+      <section class="three-cols">
+        <div class="right-column-img">
+            <img
+              alt="Middle image"
+              src="https://via.placeholder.com/150"
+            />
+        </div>
+        <div class="mid-column-text">
+          <h2></h2>
+          <p>
+            Does a few hours of white water adventure excite you? How about a
+            chance to cliff jump into the river from some of the most scenic parts
+            of the wilderness? If your looking for a memorable river experience
+            you've come to the right place! We have trips suited for all
+            experience and thrill levels.
+          </p>
+        </div>
+        <div class="left-column-img">
+          <img
+            alt="Middle image"
+            src="https://via.placeholder.com/150"
+          />
+        </div>
+      </section>
     </main>
     <footer>
         <div id="legal">
