--- a/subpage-1.html
+++ b/subpage-1.html
@@ -48,7 +48,7 @@
         </main>
         <footer>
             <div id="legal">
-                &copy; [YEAR] [BUSINESS NAME]. All Rights Reserved.
+                &copy; 2021 Graphic Guide. All Rights Reserved.
             </div>
             <nav>
                 <ul>
