fixed the page titles and style-guide

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     </main>
     <footer>
         <div id="legal">
-            &copy; [YEAR] [BUSINESS NAME]. All Rights Reserved.
+           &copy; 2021 Graphic Guide. All Rights Reserved.
         </div>
         <nav>
             <ul>
