--- a/style-guide.html
+++ b/style-guide.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Style Guide</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
     <script src="js/dark-mode.js"></script>
+    <link rel="stylesheet" href="css/style-guide.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Carter+One&family=Patrick+Hand&display=swap"
+      rel="stylesheet"
+    />
 </head>
 <body>
     <header>
@@ -44,13 +51,141 @@
         </nav>
     </header>
     <main>
-        ..... 
-        .....
-        ..... 
+        <h1>Final Project Style Guide</h1>
+        
+        <div>
+          <h2>Normal Colors</h2>
+          <div class="color-wrapper">
+            <div class="title">
+              Background
+            </div>
+            <div class="color"></div>
+            <div>
+              #ECE4B7
+            </div>
+          </div>
+          <div class="color-wrapper">
+            <div class="title">
+              Alt Background
+            </div>
+            <div class="color"></div>
+            <div>
+              #E5D4ED
+            </div>
+          </div>
+          <div class="color-wrapper">
+            <div class="title">
+              Primary
+            </div>
+            <div class="color"></div>
+            <div>
+              #023C40
+            </div>
+          </div>
+          <div class="color-wrapper">
+            <div class="title">
+              Alt Primary
+            </div>
+            <div class="color"></div>
+            <div>
+              #7E78D2
+            </div>
+          </div>
+        </div>
+        <div>
+          <h2>Dark Mode Colors</h2>
+          <div class="color-wrapper">
+            <div class="title">
+              Background
+            </div>
+            <div class="color"></div>
+            <div>
+              #212227
+            </div>
+          </div>
+          <div class="color-wrapper">
+            <div class="title">
+              Alt Background
+            </div>
+            <div class="color"></div>
+            <div>
+              #A24936
+            </div>
+          </div>
+          <div class="color-wrapper">
+            <div class="title">
+              Primary
+            </div>
+            <div class="color"></div>
+            <div>
+              #EFFFC8
+            </div>
+          </div>
+          <div class="color-wrapper">
+            <div class="title">
+              Alt Primary
+            </div>
+            <div class="color"></div>
+            <div>
+              #637074
+            </div>
+          </div>
+        </div>
+        <div>
+          <h2>Fonts</h2>
+          <p>
+            I have chosen to use the following fonts for my site:
+          </p>
+          <ul>
+            <li>
+              Patric Hands: Used for primary.
+            </li>
+            <li>
+              Carter 1: Used for heads.
+            </li>
+          </ul>
+        </div>
+        <div>
+          <h2>Elevator Pitch</h2>
+          <p>
+            People of all ages are frustrated with not being able to design things
+            online. Graphic Guide gives you the option to come up with an idea of a
+            design you have always wanted and to work one on one with a Designer of
+            your choice to come up with it. With our website we provide you with a
+            choice of Designers of various levels to go and help you design a logo,
+            web graphics, digital art, online advertising, and much more. So sign up
+            today.
+          </p>
+        </div>
+        <div>
+          <h2>Purpose Statement</h2>
+          <p>
+            I want to make a website that lets you find help you need to design a product you want. 
+          </p>
+        </div>
+        <div>
+          <h2>Audience Statement</h2>
+          <p>
+            I want people of all ages no matter their background or finacess to be able to find help they need to design a product they want, and be able to access it easily through online sources.
+          </p>
+        </div>
+        <div>
+          <h2>Misson Statement</h2>
+          <p>
+            To help people design ideas.
+          </p>
+        </div>
+        <div>
+          <h2>Persona and Scenario Ideas</h2>
+          <p>
+    
+          </p>
+        </div>
+
     </main>
     <footer>
         <div id="legal">
-            &copy; [YEAR] [BUSINESS NAME]. All Rights Reserved.
+            &copy; 2021 Graphic Guide. All Rights Reserved.
         </div>
         <nav>
             <ul>
