--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>About Us</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
     <script src="js/dark-mode.js"></script>
@@ -103,7 +103,7 @@
         </main>
     <footer>
     <div id="legal">
-        &copy; [YEAR] [BUSINESS NAME]. All Rights Reserved.
+        &copy; 2021 Graphic Guide. All Rights Reserved.
     </div>
     <nav>
         <ul>
