--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
                     />
                 </div>
                 <div class="mid-column-text">
-                  <h2></h2>
+                  <h2>Tyler English</h2>
                   <p>
                     me
                   </p>
@@ -66,7 +66,7 @@
                     />
                 </div>
                 <div class="mid-column-text">
-                  <h2></h2>
+                  <h2>Jimmy John</h2>
                   <p>
                     an employee
                   </p>
@@ -80,7 +80,7 @@
                     />
                 </div>
                 <div class="mid-column-text">
-                  <h2></h2>
+                  <h2>Rick Hands</h2>
                   <p>
                     an employee
                   </p>
@@ -94,12 +94,27 @@
                     />
                 </div>
                 <div class="mid-column-text">
-                  <h2></h2>
+                  <h2>John North</h2>
                   <p>
                     an employee
                   </p>
                 </div>
               </section>
+              <section class="full-cols">
+                  <h2>What we are about</h2>
+                  <p>
+                    basic info about the Company
+                  </p>
+              </section>
+              <section class="full-cols">
+                <h2></h2>
+                <div class="full-image">
+                    <img
+                    alt="Middle image"
+                    src="https://via.placeholder.com/1000x200"
+                  />
+                </div>
+            </section>
         </main>
     <footer>
     <div id="legal">
