--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             />
         </div>
         <div class="mid-column-text">
-          <h2></h2>
+          <h2>Goals</h2>
           <p>
             Does a few hours of white water adventure excite you? How about a
             chance to cliff jump into the river from some of the most scenic parts
@@ -81,7 +81,7 @@
             <!-- second row-->
             <section class="three-cols">
                 <div class="mid-column-text">
-                  <h2></h2>
+                  <h2>What We've Done</h2>
                   <p>
                     Does a few hours of white water adventure excite you? How about a
                     chance to cliff jump into the river from some of the most scenic parts
@@ -100,7 +100,7 @@
             />
         </div>
         <div class="mid-column-text">
-          <h2></h2>
+          <h2>What we stand by</h2>
           <p>
             Does a few hours of white water adventure excite you? How about a
             chance to cliff jump into the river from some of the most scenic parts
