finished the outline of the pages

--- a/about.html
+++ b/about.html
@@ -44,77 +44,50 @@
         </nav>
     </header>
         <main>
-            <section class="three-cols">
-                <div class="left-column-img">
-                    <img
-                      alt="Middle image"
-                      src="https://via.placeholder.com/150"
-                    />
-                </div>
-                <div class="mid-column-text">
-                  <h2>Tyler English</h2>
-                  <p>
-                    me
-                  </p>
-                </div>
-              </section>
-              <section class="three-cols">
-                <div class="right-column-img">
-                    <img
-                      alt="Middle image"
-                      src="https://via.placeholder.com/150"
-                    />
-                </div>
-                <div class="mid-column-text">
-                  <h2>Jimmy John</h2>
-                  <p>
-                    an employee
-                  </p>
-                </div>
-              </section>
-              <section class="three-cols">
-                <div class="left-column-img">
-                    <img
-                      alt="Middle image"
-                      src="https://via.placeholder.com/150"
-                    />
-                </div>
-                <div class="mid-column-text">
-                  <h2>Rick Hands</h2>
-                  <p>
-                    an employee
-                  </p>
-                </div>
-              </section>
-              <section class="three-cols">
-                <div class="right-column-img">
-                    <img
-                      alt="Middle image"
-                      src="https://via.placeholder.com/150"
-                    />
-                </div>
-                <div class="mid-column-text">
-                  <h2>John North</h2>
-                  <p>
-                    an employee
-                  </p>
-                </div>
-              </section>
-              <section class="full-cols">
-                  <h2>What we are about</h2>
-                  <p>
-                    basic info about the Company
-                  </p>
-              </section>
-              <section class="full-cols">
-                <h2></h2>
-                <div class="full-image">
-                    <img
-                    alt="Middle image"
-                    src="https://via.placeholder.com/1000x200"
-                  />
-                </div>
-            </section>
+          <section class="three-cols">
+            <div class="right-column-img">
+                <img
+                  alt="Middle image"
+                  src="https://via.placeholder.com/150"
+                />
+            </div>
+            <div class="mid-column-text">
+              <h2>What We Do</h2>
+              <p>
+                Does a few hours of white water adventure excite you? How about a
+                chance to cliff jump into the river from some of the most scenic parts
+                of the wilderness? If your looking for a memorable river experience
+                you've come to the right place! We have trips suited for all
+                experience and thrill levels.
+              </p>
+            </div>
+            <div class="left-column-img">
+              <img
+                alt="Middle image"
+                src="https://via.placeholder.com/150"
+              />
+            </div>
+          </section>
+          <section class="full-cols">
+              <h2>Our Future Plans</h2>
+              <p>
+                basic info about the Company
+              </p>
+          </section>
+          <section class="full-cols">
+            <h2>Mission</h2>
+            <p>
+              basic info about the Company
+            </p>
+          </section>
+          <section class="full-cols">
+            <div class="full-image">
+                <img
+                alt="Middle image"
+                src="https://via.placeholder.com/1000x200"
+              />
+            </div>
+        </section>
         </main>
     <footer>
     <div id="legal">
