--- a/subpage-1.html
+++ b/subpage-1.html
@@ -44,21 +44,51 @@
         </nav>
     </header>
         <main>
+            <section class="three-cols">
+                <div class="right-column-img">
+                    <img
+                      alt="Middle image"
+                      src="https://via.placeholder.com/150"
+                    />
+                </div>
+                <div class="mid-column-text">
+                  <h2>About Us</h2>
+                  <p>
+                    Does a few hours of white water adventure excite you? How about a
+                    chance to cliff jump into the river from some of the most scenic parts
+                    of the wilderness? If your looking for a memorable river experience
+                    you've come to the right place! We have trips suited for all
+                    experience and thrill levels.
+                  </p>
+                </div>
+                <div class="left-column-img">
+                  <img
+                    alt="Middle image"
+                    src="https://via.placeholder.com/150"
+                  />
+                </div>
+              </section>
+              <section class="full-cols">
+                <h2>Satistics Over the Years</h2>
+                <p>
+                  basic info about the Company
+                </p>
+            </section>
              <table style="width:50%" >
                 <tr>
-                    <th>Firstname</th>
-                    <th>Lastname</th>
-                    <th>Age</th>
+                    <th>Year</th>
+                    <th>Custormer</th>
+                    <th>Rating</th>
                 </tr>
                 <tr>
-                    <td>Jill</td>
-                    <td>Smith</td>
-                    <td>50</td>
+                    <td>2010</td>
+                    <td>201</td>
+                    <td>4.45/5</td>
                 </tr>
                 <tr>
-                    <td>Eve</td>
-                    <td>Jackson</td>
-                    <td>94</td>
+                    <td>2011</td>
+                    <td>1059</td>
+                    <td>4.15/5</td>
                 </tr>
             </table>      
         </main>
