--- a/subpage-2.html
+++ b/subpage-2.html
@@ -44,11 +44,48 @@
         </nav>
     </header>
         <main>
-            ....
+            <section class="three-cols">
+                <div class="card-left">
+                    <img src="C:\Users\tyler\english-wdd-130\assets\contact\0C159138-CACD-4CEB-9A3B-9196CB991398.jpeg" alt="Isaac" style="width:100%"/>
+                    <div class="container">
+                      <h4><b>Isaac</b></h4>
+                      <p>Co-Owner</p>
+                    </div>
+                  </div>
+                  <div class="card-mid">
+                    <img src="C:\Users\tyler\english-wdd-130\assets\contact\1D0B0C68-6B85-4CD5-938B-E5CD1908B814.jpeg" alt="Avatar" style="width:100%">
+                    <div class="container">
+                      <h4><b>Tyler English</b></h4>
+                      <p>Co-Owner</p>
+                    </div>
+                  </div>
+                  <div class="card-right">
+                    <img src="C:\Users\tyler\english-wdd-130\assets\contact\5D89FBA6-5CC7-450A-94FD-C5ECD62855ED.jpeg" alt="Avatar" style="width:100%">
+                    <div class="container">
+                      <h4><b>Gaby Woodrome</b></h4>
+                      <p>Co-Owner </p>
+                    </div>
+                  </div>
+            </section>
+            <section class="full-cols">
+                <h2>How We Got Here</h2>
+                <p>
+                  basic info about the Company
+                </p>
+            </section>
+            <section class="full-cols">
+                <div class="full-image">
+                    <img
+                    alt="Middle image"
+                    src="https://via.placeholder.com/1000x200"
+                  />
+                </div>
+            </section>
         </main>
         <footer>
             <div id="legal">
-                &copy; [YEAR] [BUSINESS NAME]. All Rights Reserved.&copy; 2021 Graphic Guide. All Rights Reserved.v>
+                &copy; 2021 Graphic Guide. All Rights Reserved.
+            </div>
             <nav>
                 <ul>
                     <li>
