--- a/wireframes.html
+++ b/wireframes.html
@@ -44,7 +44,62 @@
         </nav>
     </header>
         <main>
-            ....
+            <section class="three-cols">
+
+                  <div class="card-mid">
+                    <img src="img_avatar.png" alt="Avatar" style="width:100%">
+                    <div class="container">
+                      <h4><b>Tyler English</b></h4>
+                      <p>Co-Owner</p>
+                    </div>
+                  </div>
+
+            </section>
+            <section class="three-cols">
+                <div class="card-left">
+                    <img src="img_avatar.png" alt="Avatar" style="width:100%">
+                    <div class="container">
+                      <h4><b>Isaac</b></h4>
+                      <p>Co-Owner</p>
+                    </div>
+                  </div>
+                  <div class="mid-column-text">
+                    <h2>What We've Done</h2>
+                    <p>
+                      Does a few hours of white water adventure excite you? How about a
+                      chance to cliff jump into the river from some of the most scenic parts
+                      of the wilderness? If your looking for a memorable river experience
+                      you've come to the right place! We have trips suited for all
+                      experience and thrill levels.
+                    </p>
+                  </div>
+                  </div>
+                  <div class="card-right">
+                    <img src="img_avatar.png" alt="Avatar" style="width:100%">
+                    <div class="container">
+                      <h4><b>Gaby Woodrome</b></h4>
+                      <p>Co-Owner </p>
+                    </div>
+                  </div>
+            </section>
+            <section class="three-cols">
+                <div class="card-left">
+                    <img src="C:\Users\tyler\english-wdd-130\assets\contact\0C159138-CACD-4CEB-9A3B-9196CB991398.jpeg" alt="Avatar" style="width:100%">
+                    <div class="container">
+                      <h4><b>Isaac</b></h4>
+                      <p>Co-Owner</p>
+                    </div>
+                  </div>
+
+                  </div>
+                  <div class="card-right">
+                    <img src="img_avatar.png" alt="Avatar" style="width:100%">
+                    <div class="container">
+                      <h4><b>Gaby Woodrome</b></h4>
+                      <p>Co-Owner </p>
+                    </div>
+                  </div>
+            </section>
         </main>
         <footer>
             <div id="legal">
