--- a/contact-us.html
+++ b/contact-us.html
@@ -45,7 +45,68 @@
         </nav>
     </header>
         <main>
-
+            <section class="three-cols">
+                <div class="right-column-img">
+                    <img
+                      alt="Middle image"
+                      src="https://via.placeholder.com/150"
+                    />
+                </div>
+                <div class="mid-column-text">
+                  <h2>Basic Info About Us</h2>
+                  <p>
+                    Does a few hours of white water adventure excite you? How about a
+                    chance to cliff jump into the river from some of the most scenic parts
+                    of the wilderness? If your looking for a memorable river experience
+                    you've come to the right place! We have trips suited for all
+                    experience and thrill levels.
+                  </p>
+                </div>
+                <div class="left-column-img">
+                  <img
+                    alt="Middle image"
+                    src="https://via.placeholder.com/150"
+                  />
+                </div>
+              </section>
+              <section class="three-cols">
+                <div class="right-column-img">
+                    <img
+                      alt="Middle image"
+                      src="https://via.placeholder.com/150"
+                    />
+                </div>
+                <div class="mid-column-text">
+                  <h2>Idea of What You Want</h2>
+                  <p>
+                    Does a few hours of white water adventure excite you? How about a
+                    chance to cliff jump into the river from some of the most scenic parts
+                    of the wilderness? If your looking for a memorable river experience
+                    you've come to the right place! We have trips suited for all
+                    experience and thrill levels.
+                  </p>
+                </div>
+                <div class="left-column-img">
+                  <img
+                    alt="Middle image"
+                    src="https://via.placeholder.com/150"
+                  />
+                </div>
+              </section>
+              <section class="full-cols">
+                <h2>Example of How To Ask</h2>
+                <p>
+                  basic info about the Company
+                </p>
+            </section>
+            <section class="full-cols">
+                <div class="full-image">
+                    <img
+                    alt="Middle image"
+                    src="https://via.placeholder.com/1000x200"
+                  />
+                </div>
+            </section>
             <form method="GET" action="contact-us.html" id="contact-form">
                 <label for="fname">First name:</label>
                 <input type="text" id="fname" name="fname"><br><br>
