finished the header and most of the home page

--- a/contact-us.html
+++ b/contact-us.html
@@ -13,11 +13,13 @@
     <header>
         <div id="logo-wrapper">
             <a href="index.html">
-                <img src="https://via.placeholder.com/150x100.jpg" id="logo">
+                <img src="assets\contact\logo_real.png" id="logo">
             </a>
         </div>
         <div>
-            Company Name
+            <div class="title">
+                Graphic Guide
+            </div>
         </div>
         <nav>
             <ul>
@@ -93,20 +95,7 @@
                   />
                 </div>
               </section>
-              <section class="full-cols">
-                <h2>Example of How To Ask</h2>
-                <p>
-                  basic info about the Company
-                </p>
-            </section>
-            <section class="full-cols">
-                <div class="full-image">
-                    <img
-                    alt="Middle image"
-                    src="https://via.placeholder.com/1000x200"
-                  />
-                </div>
-            </section>
+
             <form method="GET" action="contact-us.html" id="contact-form">
                 <label for="fname">First name:</label>
                 <input type="text" id="fname" name="fname"><br><br>
