--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <header>
         <div id="logo-wrapper">
             <a href="index.html">
-                <img src="https://via.placeholder.com/150x100.jpg" id="logo">
+                <img src="assets\contact\logo_real.png" id="logo">
             </a>
         </div>
-        <div>
-            Company Name
+        <div class="title">
+            Graphic Guide
         </div>
         <nav>
             <ul>
@@ -49,7 +49,7 @@
         <img
           id="banner"
           alt="Banner Image"
-          src="https://via.placeholder.com/1500x300"
+          src="assets\contact\banner_image.png"
         />
       </div>
   
@@ -58,7 +58,7 @@
         <div class="right-column-img">
             <img
               alt="Middle image"
-              src="https://via.placeholder.com/150"
+              src="assets\contact\pic_1.png"
             />
         </div>
         <div class="mid-column-text">
@@ -74,7 +74,7 @@
         <div class="left-column-img">
           <img
             alt="Middle image"
-            src="https://via.placeholder.com/150"
+            src="assets\contact\pic_3.png"
           />
         </div>
       </section>
@@ -96,7 +96,7 @@
         <div class="right-column-img">
             <img
               alt="Middle image"
-              src="https://via.placeholder.com/150"
+              src="assets\contact\pic_2.png"
             />
         </div>
         <div class="mid-column-text">
@@ -112,7 +112,7 @@
         <div class="left-column-img">
           <img
             alt="Middle image"
-            src="https://via.placeholder.com/150"
+            src="assets\contact\pic_4.png"
           />
         </div>
       </section>
