--- a/style-guide.html
+++ b/style-guide.html
@@ -19,11 +19,13 @@
     <header>
         <div id="logo-wrapper">
             <a href="index.html">
-                <img src="https://via.placeholder.com/150x100.jpg" id="logo">
+                <img src="assets\contact\logo_real.png" id="logo">
             </a>
         </div>
         <div>
-            Company Name
+          <div class="title">
+            Graphic Guide
+        </div>
         </div>
         <nav>
             <ul>
