--- a/subpage-2.html
+++ b/subpage-2.html
@@ -12,11 +12,13 @@
     <header>
         <div id="logo-wrapper">
             <a href="index.html">
-                <img src="https://via.placeholder.com/150x100.jpg" id="logo">
+                <img src="assets\contact\logo_real.png" id="logo">
             </a>
         </div>
         <div>
-            Company Name
+            <div class="title">
+                Graphic Guide
+            </div>
         </div>
         <nav>
             <ul>
@@ -46,21 +48,21 @@
         <main>
             <section class="three-cols">
                 <div class="card-left">
-                    <img src="C:\Users\tyler\english-wdd-130\assets\contact\0C159138-CACD-4CEB-9A3B-9196CB991398.jpeg" alt="Isaac" style="width:100%"/>
+                    <img src="assets\\contact\\0C159138-CACD-4CEB-9A3B-9196CB991398.jpeg" alt="Isaac" >
                     <div class="container">
                       <h4><b>Isaac</b></h4>
                       <p>Co-Owner</p>
                     </div>
                   </div>
                   <div class="card-mid">
-                    <img src="C:\Users\tyler\english-wdd-130\assets\contact\1D0B0C68-6B85-4CD5-938B-E5CD1908B814.jpeg" alt="Avatar" style="width:100%">
+                    <img src="assets\\contact\\1D0B0C68-6B85-4CD5-938B-E5CD1908B814.jpeg" alt="Avatar" style="width:100%">
                     <div class="container">
                       <h4><b>Tyler English</b></h4>
                       <p>Co-Owner</p>
                     </div>
                   </div>
                   <div class="card-right">
-                    <img src="C:\Users\tyler\english-wdd-130\assets\contact\5D89FBA6-5CC7-450A-94FD-C5ECD62855ED.jpeg" alt="Avatar" style="width:100%">
+                    <img src="assets\\contact\\5D89FBA6-5CC7-450A-94FD-C5ECD62855ED.jpeg" alt="Avatar" style="width:100%">
                     <div class="container">
                       <h4><b>Gaby Woodrome</b></h4>
                       <p>Co-Owner </p>
