--- a/wireframes.html
+++ b/wireframes.html
@@ -12,11 +12,13 @@
     <header>
         <div id="logo-wrapper">
             <a href="index.html">
-                <img src="https://via.placeholder.com/150x100.jpg" id="logo">
+                <img src="assets\contact\logo_real.png" id="logo">
             </a>
         </div>
         <div>
-            Company Name
+            <div class="title">
+                Graphic Guide
+            </div>
         </div>
         <nav>
             <ul>
@@ -47,20 +49,22 @@
             <section class="three-cols">
 
                   <div class="card-mid">
-                    <img src="img_avatar.png" alt="Avatar" style="width:100%">
+                    <a href="index.html">
+                    <img src="assets\contact\home_page.png" alt="Avatar" style="width:100%">
+                    </a>
                     <div class="container">
-                      <h4><b>Tyler English</b></h4>
-                      <p>Co-Owner</p>
+                      <h4><b>Home Page</b></h4>
                     </div>
                   </div>
 
             </section>
             <section class="three-cols">
                 <div class="card-left">
-                    <img src="img_avatar.png" alt="Avatar" style="width:100%">
+                    <a href="contact-us.html"> 
+                     <img src="assets\contact\contact_us.png" alt="Avatar" style="width:100%">
+                    </a>
                     <div class="container">
-                      <h4><b>Isaac</b></h4>
-                      <p>Co-Owner</p>
+                      <h4><b>Contact Us</b></h4>
                     </div>
                   </div>
                   <div class="mid-column-text">
@@ -75,28 +79,31 @@
                   </div>
                   </div>
                   <div class="card-right">
-                    <img src="img_avatar.png" alt="Avatar" style="width:100%">
+                    <a href="about.html">
+                    <img src="assets\contact\about_us.png" alt="Avatar" style="width:100%">
+                    </a>
                     <div class="container">
-                      <h4><b>Gaby Woodrome</b></h4>
-                      <p>Co-Owner </p>
+                      <h4><b>About Us</b></h4>
                     </div>
                   </div>
             </section>
             <section class="three-cols">
                 <div class="card-left">
-                    <img src="C:\Users\tyler\english-wdd-130\assets\contact\0C159138-CACD-4CEB-9A3B-9196CB991398.jpeg" alt="Avatar" style="width:100%">
+                    <a href="subpage-1.html">
+                        <img src="assets\contact\subpage_1.png" alt="Avatar" style="width:100%">
+                    </a>
                     <div class="container">
-                      <h4><b>Isaac</b></h4>
-                      <p>Co-Owner</p>
+                      <h4><b>Subpage 1</b></h4>
                     </div>
                   </div>
 
                   </div>
                   <div class="card-right">
-                    <img src="img_avatar.png" alt="Avatar" style="width:100%">
+                    <a href="subpage-2.html">
+                        <img src="assets\contact\subpage_2.png" alt="Avatar" style="width:100%">
+                    </a>
                     <div class="container">
-                      <h4><b>Gaby Woodrome</b></h4>
-                      <p>Co-Owner </p>
+                      <h4><b>Subpage 2</b></h4>
                     </div>
                   </div>
             </section>
