finished most of the pages beside the words

--- a/contact-us.html
+++ b/contact-us.html
@@ -51,7 +51,7 @@
                 <div class="right-column-img">
                     <img
                       alt="Middle image"
-                      src="https://via.placeholder.com/150"
+                      src="assets\contact\me.jpg"
                     />
                 </div>
                 <div class="mid-column-text">
@@ -67,7 +67,7 @@
                 <div class="left-column-img">
                   <img
                     alt="Middle image"
-                    src="https://via.placeholder.com/150"
+                    src="assets\contact\edit_me.jpg"
                   />
                 </div>
               </section>
@@ -75,7 +75,7 @@
                 <div class="right-column-img">
                     <img
                       alt="Middle image"
-                      src="https://via.placeholder.com/150"
+                      src="assets\contact\edit_mom.jpg"
                     />
                 </div>
                 <div class="mid-column-text">
@@ -91,7 +91,7 @@
                 <div class="left-column-img">
                   <img
                     alt="Middle image"
-                    src="https://via.placeholder.com/150"
+                    src="assets\contact\mom.jpg"
                   />
                 </div>
               </section>
@@ -102,6 +102,10 @@
 
                 <label for="fname">Last Name:</label>
                 <input type="text" id="lname" name="lname"><br><br>
+
+
+                <label for="email">Email:</label>
+                <input type="text" id="email_address" name="email"><br><br>
                 <textarea id="message" name="Message" rows="4" cols="50">
                     
                     </textarea>
