--- a/subpage-1.html
+++ b/subpage-1.html
@@ -50,7 +50,7 @@
                 <div class="right-column-img">
                     <img
                       alt="Middle image"
-                      src="https://via.placeholder.com/150"
+                      src="assets\contact\graph_1_real.jpg"
                     />
                 </div>
                 <div class="mid-column-text">
@@ -66,33 +66,94 @@
                 <div class="left-column-img">
                   <img
                     alt="Middle image"
-                    src="https://via.placeholder.com/150"
+                    src="assets\contact\graph_2.jpg"
                   />
                 </div>
               </section>
               <section class="full-cols">
                 <h2>Satistics Over the Years</h2>
                 <p>
-                  basic info about the Company
+                  What I want to show you is how many custormers we've had from when we started
+                  and what overall rating we had that year.
                 </p>
             </section>
-             <table style="width:50%" >
-                <tr>
-                    <th>Year</th>
-                    <th>Custormer</th>
-                    <th>Rating</th>
-                </tr>
-                <tr>
-                    <td>2010</td>
-                    <td>201</td>
-                    <td>4.45/5</td>
-                </tr>
-                <tr>
-                    <td>2011</td>
-                    <td>1059</td>
-                    <td>4.15/5</td>
-                </tr>
-            </table>      
+
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <table style="width: 50%">
+                        <tr>
+                            <th>Year</th>
+                            <th>Custormer</th>
+                            <th>Rating</th>
+                        </tr>
+                        <tr>
+                            <td>2010</td>
+                            <td>15</td>
+                            <td>5/5</td>
+                        </tr>
+                        <tr>
+                            <td>2011</td>
+                            <td>119</td>
+                            <td>4.25/5</td>
+                        </tr>
+                        <tr>
+                            <td>2012</td>
+                            <td>268</td>
+                            <td>4.35/5</td>
+                        </tr>
+                        <tr>
+                            <td>2013</td>
+                            <td>437</td>
+                            <td>3.16/5</td>
+                        </tr>
+                        <tr>
+                            <td>2014</td>
+                            <td>403</td>
+                            <td>4.6/5</td>
+                        </tr>
+                        <tr>
+                            <td>2015</td>
+                            <td>509</td>
+                            <td>4.87/5</td>
+                        </tr>
+                        <tr>
+                            <td>2016</td>
+                            <td>127</td>
+                            <td>2.35/5</td>
+                        </tr>
+                        <tr>
+                            <td>2017</td>
+                            <td>897</td>
+                            <td>4.66/5</td>
+                        </tr>
+                        <tr>
+                            <td>2018</td>
+                            <td>901</td>
+                            <td>4.51/5</td>
+                        </tr>
+                        <tr>
+                            <td>2019</td>
+                            <td>1012</td>
+                            <td>3.77/5</td>
+                        </tr>
+                        <tr>
+                            <td>2020</td>
+                            <td>1124</td>
+                            <td>4.91/5</td>
+                        </tr>
+                    </table> 
+                  </div>
+                  <div class="flip-card-back">
+                    <img
+                    alt="Middle image"
+                    src="assets\contact\graph_real.jpg"
+                  />
+                  </div>
+                </div>
+              </div>
+           
+              
         </main>
         <footer>
             <div id="legal">
