--- a/subpage-2.html
+++ b/subpage-2.html
@@ -55,7 +55,7 @@
                     </div>
                   </div>
                   <div class="card-mid">
-                    <img src="assets\\contact\\1D0B0C68-6B85-4CD5-938B-E5CD1908B814.jpeg" alt="Avatar" style="width:100%">
+                    <img src="assets\contact\3475D617-E437-4C21-BCA1-3AA8E4D72A80.jpeg" alt="Avatar" style="width:100%">
                     <div class="container">
                       <h4><b>Tyler English</b></h4>
                       <p>Co-Owner</p>
@@ -74,14 +74,6 @@
                 <p>
                   basic info about the Company
                 </p>
-            </section>
-            <section class="full-cols">
-                <div class="full-image">
-                    <img
-                    alt="Middle image"
-                    src="https://via.placeholder.com/1000x200"
-                  />
-                </div>
             </section>
         </main>
         <footer>
